--- a/src/Admin/components/AdminPage.module.css
+++ b/src/Admin/components/AdminPage.module.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  
+  padding-bottom: 25%;
 }
 
 /* Input and Button Container Styles */
