--- a/src/Admin/components/AllEmployee.module.css
+++ b/src/Admin/components/AllEmployee.module.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 40%;
 }
 
 .mainList {
@@ -63,6 +64,13 @@
 }
 
 @media (max-width: 600px) {
+    .allEmployeesDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 80%;
+    }
+    
     .employeeWrapper {
         flex-direction: column; /* Stack elements vertically on small screens */
         align-items: center;
