--- a/src/Admin/components/AllEmployee.module.css
+++ b/src/Admin/components/AllEmployee.module.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 40%;
+    min-height: 100vh;
 }
 
 .mainList {
@@ -68,7 +68,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-bottom: 80%;
     }
     
     .employeeWrapper {
